added fighting animation

--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,7 @@
   </head>
   
   <body>
+    <p id = "win"></p>
     
     <p id = "health1">Link: <b id = "L" ></b>   </p>
       <p id = "health" > Kirby: <b id = "K" ></b>     </p>
